# Simple-Compressor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
modules/JUCE/extras/: CMakeLists.txt
modules/JUCE/modules/juce_gui_basics/: juce_gui_basics.cpp
